# .dotfiles

./: .tmux.conf  autojump.txt  requirement.md
.config/helix/: languages.toml
.config/kitty/: kitty.conf
.config/lvim/: README.md  package.json
.config/nvim/: init.lua  init.vim
ubuntu/: .bashrc  .fehbg  .zshrc  install.sh
ubuntu/.config/: mimeapps.list  pavucontrol.ini
ubuntu/alias/: .gdb_pwn_funcs  .pwn_funcs  .system_aliases  .system_funcs
ubuntu/expect-scripts/: shellen.sc
ubuntu/ghidra/: nkp_ghidra.kbxml
ubuntu/profile/: .profile
ubuntu/python-scripts/: diigo_fetcher.py  fastgdb.py  fastgdb_definitions  fastgdb_definitions_orig  fastgdb_install.sh  fastgdb_orig.py  gdb_history_cmds.py  github_downloader.py  polyarch.py  polyasm.py  polydis.py  polyunicorn.py  pwn-summary.py  pwnterpreter.py  randsec.py  rgb.py
ubuntu/rust-scripts/diigo-fetcher/: Cargo.toml
ubuntu/rust-scripts/diigo-fetcher/src/: main.rs
ubuntu/tmux/: .tmux.conf  tmux_addr_copy.sh  tmux_paste_popup.sh  tmux_repwn.sh
ubuntu/vim/: .vimrc
ubuntu/zsh/: .zshrc
useful_codes/: argumant.py  detect_pressed_key.py  get_dynamic_terminal_size.sh  get_popular_words.sh  jnl.sh  makro.c  pins.c  read_me_exam.md  tus_algilama.c
useful_codes/c_files/: cift_yonlu_konuma_ekleme_silme_tersten_gosterme.c  leetcode.c  passing_parameters.c  postfix.c  property.c  tek_yonlu_dairesel_baglantili_liste.c
useful_codes/c_vs_cpython_comparison/: find_primes.c  out  python.c  setup_cpython.py
useful_codes/py_files/: create_term.py
wsl/: .bash_profile  .bash_profile.save  .bashrc  autojump.txt
(+154 files in other folders)
